<resources>
    <string name="app_name">My Application</string>
    <string name="mainTitle">第一个App</string>
    <string name="btnLoginTxt">登录</string>
    <string name="btnRegisterTxt">注册</string>
    <string name="springTxt">春天</string>
    <string name="summerTxt">夏天</string>
    <string name="autumnTxt">秋天</string>
    <string name="winterTxt">冬天</string>
    <string name="loginTitle">欢迎登陆</string>
    <string name="xm_lab">姓名：</string>
    <string name="mm_lab">密码：</string>
    <string name="xm_hint">请输入姓名</string>
    <string name="mm_hint">请输入密码</string>
    <string name="btnSendSmsText">点击发送</string>
    <string name="text_label_1">For you</string>
    <string name="text_label_2">Mine</string>
    <string name="text_label_3">Media</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>