<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btn_spring"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/springTxt">
        </Button>
        <Button
            android:id="@+id/btn_summer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/summerTxt">
        </Button>
        <Button
            android:id="@+id/btn_autumn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/autumnTxt">
        </Button>
        <Button
            android:id="@+id/btn_winter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/winterTxt">
        </Button>

    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        >
        <ImageView
            android:id="@+id/img_spring"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="fitXY"
            android:src="@drawable/loginBackground">
        </ImageView>
        <ImageView
            android:id="@+id/img_summer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="fitXY"
            android:src="@drawable/ludashi">
        </ImageView>
    </FrameLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>